# mimeassoc

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
mimeassoc/: Cargo.toml
mimeassoc/src/: desktop_entry.rs  mime_type.rs
mimeassoc/test-data/local/share/applications/: invalid.desktop
mimeassoc/test-data/usr/share/applications/: org.gnome.gedit.desktop
mimeassoc_cli/: Cargo.toml
src/: desktop_entry.rs  desktop_entry_store.rs  lib.rs  main.rs  mime_association_store.rs  mime_info.rs  mime_type.rs  mime_type_association_store.rs  mime_type_info.rs
src/lib/: app_id.rs  desktop_entry.rs  mime_type.rs  mod.rs
src/mime_assoc/: desktop_entry.rs  mime_type.rs  mod.rs
test-data/config/: defaults.list  mimeapps.list
test-data/local/share/applications/: org.gnome.Weather.desktop  photopea.desktop
test-data/usr/share/applications/: gnome-mimeapps.list  org.gnome.eog.desktop
