[package]
name = "mimeassoc_gui"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "mimeassoc_cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2", features = ["derive"] }
mimeassoc = { path = "mimeassoc" }
