[package]
name = "mimeassoc"
version = "0.1.0"
edition = "2021"
default-run = "mimeassoc_gui"

[[bin]]
name = "mimeassoc_cli"

[[bin]]
name = "mimeassoc_gui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2", features = ["derive"] }
anyhow = "1.0"
is_executable = "1.0"
which = "4"
adw = { version = "0.5", package = "libadwaita", features = ["v1_4"] }
gtk = { version = "0.7", package = "gtk4", features = ["v4_8"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xml-rs = "0.8"
log = "0.4"

[build-dependencies]
glib-build-tools = "0.18.0"
